# c-shenanigans-with-the-seal-in-antartica-and-creating-making-gameplays

./: .gitignore  LICENSE  README.md  Windows-compile.txt  compile_flags.txt
AzazalGenerator/: CMakeLists.txt  README.md  azazal.cpp
AzazalGenerator/gui/: AppWindow.cpp  AppWindow.hpp  image_loader.cpp  image_loader.hpp
CLI-Calculator/: build.sh  calculator.cpp  calculator.hpp  main.cpp
femboys/: CMakeLists.txt  README.md
femboys/src/: main.cc
